refactor: remove code smells